{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 59,
  "lineage": "2d683406-8b95-ade3-592b-3fd52d85e9ce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-019fd7f8669a5788b",
            "arn": "arn:aws:ec2:us-east-1:464112108228:elastic-ip/eipalloc-019fd7f8669a5788b",
            "association_id": "eipassoc-0387bdcda9cec4774",
            "domain": "vpc",
            "id": "eipalloc-019fd7f8669a5788b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02a681f5b05fe92e1",
            "private_dns": "ip-10-0-0-47.ec2.internal",
            "private_ip": "10.0.0.47",
            "public_dns": "ec2-54-166-30-157.compute-1.amazonaws.com",
            "public_ip": "54.166.30.157",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-nat-eip",
              "Project": "voting-app"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-nat-eip",
              "Project": "voting-app"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464112108228:internet-gateway/igw-0676d07e2150d81d0",
            "id": "igw-0676d07e2150d81d0",
            "owner_id": "464112108228",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-igw",
              "Project": "voting-app"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-igw",
              "Project": "voting-app"
            },
            "vpc_id": "vpc-0dd8c80c5f4391947"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-019fd7f8669a5788b",
            "association_id": "eipassoc-0387bdcda9cec4774",
            "connectivity_type": "public",
            "id": "nat-0b41d85ebd38a0b34",
            "network_interface_id": "eni-02a681f5b05fe92e1",
            "private_ip": "10.0.0.47",
            "public_ip": "54.166.30.157",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02991f362b6c8af40",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-nat-gw",
              "Project": "voting-app"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-nat-gw",
              "Project": "voting-app"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464112108228:route-table/rtb-0509d7441ed6d237e",
            "id": "rtb-0509d7441ed6d237e",
            "owner_id": "464112108228",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b41d85ebd38a0b34",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-private-rt",
              "Project": "voting-app"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-private-rt",
              "Project": "voting-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd8c80c5f4391947"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464112108228:route-table/rtb-01573e4b85033afaa",
            "id": "rtb-01573e4b85033afaa",
            "owner_id": "464112108228",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0676d07e2150d81d0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-public-rt",
              "Project": "voting-app"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-public-rt",
              "Project": "voting-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd8c80c5f4391947"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d408f1bdea927f3",
            "region": "us-east-1",
            "route_table_id": "rtb-0509d7441ed6d237e",
            "subnet_id": "subnet-07f7fe1292c9cc66c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09025e47701a3e9c2",
            "region": "us-east-1",
            "route_table_id": "rtb-0509d7441ed6d237e",
            "subnet_id": "subnet-05c8b17f5735720ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092988de9e6b1545c",
            "region": "us-east-1",
            "route_table_id": "rtb-0509d7441ed6d237e",
            "subnet_id": "subnet-0e56e5cb8785b44f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa8f048bcf6e0725",
            "region": "us-east-1",
            "route_table_id": "rtb-01573e4b85033afaa",
            "subnet_id": "subnet-02991f362b6c8af40"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5bbb8e6658e1cf1",
            "region": "us-east-1",
            "route_table_id": "rtb-01573e4b85033afaa",
            "subnet_id": "subnet-015ad9835e596571a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04382e1e1259dbc11",
            "region": "us-east-1",
            "route_table_id": "rtb-01573e4b85033afaa",
            "subnet_id": "subnet-0e48a55da860523bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464112108228:security-group/sg-00aac2a2dc70938f5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00aac2a2dc70938f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-eks-cluster-alb-sg20250711045028012900000001",
            "name_prefix": "my-eks-cluster-alb-sg",
            "owner_id": "464112108228",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-alb-sg",
              "Project": "voting-app",
              "kubernetes.io/cluster/my-eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-alb-sg",
              "Project": "voting-app",
              "kubernetes.io/cluster/my-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd8c80c5f4391947"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464112108228:security-group/sg-0a726e82c6e934c8e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a726e82c6e934c8e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Cluster API communication",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Traffic from ALB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00aac2a2dc70938f5"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "my-eks-cluster-nodes-sg20250711045047876900000002",
            "name_prefix": "my-eks-cluster-nodes-sg",
            "owner_id": "464112108228",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-nodes-sg",
              "Project": "voting-app",
              "kubernetes.io/cluster/my-eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-nodes-sg",
              "Project": "voting-app",
              "kubernetes.io/cluster/my-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd8c80c5f4391947"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464112108228:subnet/subnet-07f7fe1292c9cc66c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f7fe1292c9cc66c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "464112108228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-private-subnet-1",
              "Project": "voting-app",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-private-subnet-1",
              "Project": "voting-app",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0dd8c80c5f4391947"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464112108228:subnet/subnet-05c8b17f5735720ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c8b17f5735720ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "464112108228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-private-subnet-2",
              "Project": "voting-app",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-private-subnet-2",
              "Project": "voting-app",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0dd8c80c5f4391947"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464112108228:subnet/subnet-0e56e5cb8785b44f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e56e5cb8785b44f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "464112108228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-private-subnet-3",
              "Project": "voting-app",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-private-subnet-3",
              "Project": "voting-app",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0dd8c80c5f4391947"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464112108228:subnet/subnet-02991f362b6c8af40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02991f362b6c8af40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "464112108228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-public-subnet-1",
              "Project": "voting-app",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-public-subnet-1",
              "Project": "voting-app",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0dd8c80c5f4391947"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464112108228:subnet/subnet-015ad9835e596571a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015ad9835e596571a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "464112108228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-public-subnet-2",
              "Project": "voting-app",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-public-subnet-2",
              "Project": "voting-app",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0dd8c80c5f4391947"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464112108228:subnet/subnet-0e48a55da860523bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e48a55da860523bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "464112108228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-public-subnet-3",
              "Project": "voting-app",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-public-subnet-3",
              "Project": "voting-app",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0dd8c80c5f4391947"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464112108228:vpc/vpc-0dd8c80c5f4391947",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b94e7eac969ee6b6",
            "default_route_table_id": "rtb-0c87316a102323489",
            "default_security_group_id": "sg-03fb6517081794994",
            "dhcp_options_id": "dopt-0e690f6db2eca9948",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dd8c80c5f4391947",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c87316a102323489",
            "owner_id": "464112108228",
            "region": "us-east-1",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-vpc",
              "Project": "voting-app"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "my-eks-cluster-vpc",
              "Project": "voting-app"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}